--- a/tibia-optimizer-app/src/components/Optimizer/optimizer.css
+++ b/tibia-optimizer-app/src/components/Optimizer/optimizer.css
@@ -44,7 +44,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 98%;
+    border-radius: 10px;
     object-fit: cover;
     opacity: 0;
     pointer-events: none;
@@ -113,13 +114,12 @@
 
 .optimizer__equipment-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0.5rem 2rem;
-    font-size: 1rem;
+    grid-template-columns: 1fr 1fr ;
+    font-size: 0.9rem;
 }
 
 .optimizer__equipment-grid p {
-    margin: 0;
+    margin: 10px;
     background-color: rgba(255, 255, 255, 0.07);
     padding: 0.5rem 1rem;
     border-radius: 6px;
