--- a/tibia-optimizer-app/src/components/media/media.css
+++ b/tibia-optimizer-app/src/components/media/media.css
@@ -262,7 +262,7 @@
      margin-top: 2px;
      font-size: 12px;
      color: #eee;
-     text-align: right;
+     text-align: left;
  }
 
  .media__news-excerpt {
