--- a/tibia-optimizer-app/src/components/media/media.css
+++ b/tibia-optimizer-app/src/components/media/media.css
@@ -279,3 +279,10 @@
      white-space: normal;
      word-break: break-word;
  }
+
+ .media__stats-error, .media__stats-loading {
+    margin-bottom: 10px; 
+    color: white;
+     font-weight: 600;
+     text-align: center;
+ }
