--- a/tibia-optimizer-frontend/src/components/auth/auth.css
+++ b/tibia-optimizer-frontend/src/components/auth/auth.css
@@ -6,10 +6,6 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-
-  bottom: 0;
-  padding: 18px 6px 0;
-
   z-index: 200;
   pointer-events: none;
 }
@@ -46,11 +42,13 @@
   max-width: 1100px;
   background: rgba(20, 20, 20, 0.7);
   border: 1px solid rgba(255, 140, 0, 0.25);
+  border-radius: 6px;
   padding: 0px 6px;
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12);
   color: #fff;
   pointer-events: auto;
   margin: 0 auto;
+  margin-top: 25%;
 }
 
 .auth__handler-login h1 {
@@ -121,11 +119,13 @@
   max-width: 1100px;
   background: rgba(20, 20, 20, 0.7);
   border: 1px solid rgba(255, 140, 0, 0.25);
+  border-radius: 6px;
   padding: 0px 6px;
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12);
   color: #fff;
   pointer-events: auto;
   margin: 0 auto;
+  margin-top: 25%;
 }
 
 .auth__handler-register form {
